# efifetch

./: .gitignore  Cargo.toml  README.md  build.rs  dev-roadmap  rustfmt.toml
.cargo/: config.toml
assets/: uefi.logo
esp/: efifetch.efi
esp/efi/boot/: bootx64.efi
src/: consts.rs  display.rs  error.rs  event.rs  info.rs  main.rs  output.rs  tui.rs  utils.rs
src/assets/: uefi.logo
src/consts/: env.rs  firmware_vendors.rs  hypervisor_vendors.rs  input.rs
src/display/: bottom_bar.rs  bottombar.rs  memory_page.rs  page.rs  start_page.rs  start_screen.rs  theme.rs  top_bar.rs  topbar.rs
src/display/page/: about.rs  main.rs  memory.rs
src/info/: cpu.rs  date.rs  env.rs  firmware.rs  memory.rs
src/logic/: draw.rs  mod.rs
src/logic/draw/: cpu.rs  cpu_page.rs  mem.rs  mem_page.rs  menu.rs  menu_page.rs  mod.rs  net_page.rs
src/logic/info/: cpu.rs  date.rs  mem.rs  mod.rs
src/output/: page.rs  theme.rs
src/tui/: canvas.rs  page.rs  theme.rs
src/utils/: info.rs  mod.rs  protocols.rs
src/utils/info/: cpu.rs  date.rs  mem.rs  mod.rs
