[package]
name = "efifetch"
authors = ["Yaroslav Lobachev"]
categories = ["embedded", "uefi"]
description = "UEFI application for fetching hardware info, written in Rust"
repository = "https://github.com/yaroslav957/efifetch"
keywords = ["uefi", "fetch", "efi", "osdev"]
rust-version = "1.90"
version = "0.2.0"
edition = "2024"
license = "MIT"

[profile.dev]
debug = true
panic = "abort"

[profile.release]
lto = "thin"
strip = "symbols"
panic = "abort"

[dependencies.uefi]
version = "*"
features = ["panic_handler", "global_allocator"]
