[package]
name = "efifetch"
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
authors = ["Yaroslav Lobachev"]
description = "A simple system information tool for EFI environments"
repository = "https://github.com/yaroslav957/efifetch"
categories = ["embedded", "no-std", "os-dev"]
keywords = ["uefi", "fetch", "efi", "system-info"]
build = "build.rs"

[dependencies]
tenu =  { git = "https://github.com/yaroslav957/tenu", features = ["builder"] }
thiserror = { version = "=2.0.18", default-features = false }
uefi = { version = "=0.37", features = ["alloc", "global_allocator", "panic_handler"] }

[build-dependencies]
vergen = { version = "=9.1.0", features = ["build", "rustc"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
panic = "abort"
codegen-units = 1

[profile.release.build-override]
opt-level = 0
